--- a/examples/cube/Makefile
+++ b/examples/cube/Makefile
@@ -1,8 +1,7 @@
-# cube.scad -> cube.stl -> cube.gcode -> out.cube.scad -> out.cube.csg
-# FreeCAD can handle .scad as well as .csg
+# cube.scad -(openscad)-> cube.stl -(slicer)-> cube.gcode -(gcode-to-scad)-> out.cube.scad -(openscad)-> out.cube.csg -(freecad)-> out.cube.fcstd
 
 .PHONY:all clean
-all: out.cube.csg
+all: out.cube.fcstd
 
 cube.stl: cube.scad
 	openscad -o $@ $<
@@ -13,9 +12,15 @@ cube.gcode: cube.stl
 out.cube.scad: cube.gcode ../../src/gcode-to-scad.js ../../src/segment.scad
 	cat ../../src/segment.scad > $@
 	nodejs ../../src/gcode-to-scad.js $< >> $@
+	echo "}" >> $@
 
 out.cube.csg: out.cube.scad
 	openscad -o $@ $<
 
+out.cube.fcstd: out.cube.csg
+	# Run the FreeCAD in batch mode
+	#taskset -c 0
+	time python ../../src/csg-to-fcstd.py $< $@
+
 clean:
-	rm -f cube.stl cube.gcodes out.*
+	rm -f cube.stl cube.gcode out.* parsetab.py
